fix scrolling on mobile index

--- a/app/styles/index.scss
+++ b/app/styles/index.scss
@@ -32,6 +32,7 @@
 
 .media-mobile {
   .index-links {
+    height: 85vh;
     display: flex;
     align-items: center;
     margin: 2vw;
